--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>H8tch react test</title>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,300&display=swap');
-  </style>
-</head>
-<body>
-  <div id="root">Application not loaded. Please enable Javascript to view this website</div> 
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>H8tch react test</title>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,300&display=swap');
+    </style>
+    <style>
+      body {
+        background-color: #79818f;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="root">Application not loaded. Please enable Javascript to view this website</div>
+  </body>
 </html>
